[package]
name = "simeut-wallet"
version = "0.1.0"
edition = "2021"
author = "Mzzqq"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0"
clap = {version="3.1.9", features = ["derive"]}
eyre = "*"
hex = "*"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[[bin]]
name = "transact"
path= "src/transactions.rs"


[[bin]]
name = "deploy"
path= "src/contract.rs"